--- a/packages/backend/requirements.txt
+++ b/packages/backend/requirements.txt
@@ -7,8 +7,10 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 slowapi==0.1.9
-gliner==0.1.12
-torch==2.1.2
-transformers==4.36.2
+gliner==0.2.9
+torch>=2.2.0
+transformers>=4.38.2
 alembic==1.13.1
 sqlalchemy==2.0.25
+pytest==7.4.3
+pytest-asyncio==0.21.1
