--- a/packages/backend/pyproject.toml
+++ b/packages/backend/pyproject.toml
@@ -18,10 +18,11 @@ dependencies = [
     "python-multipart==0.0.6",
     "slowapi==0.1.9",
     "gliner==0.1.12",
-    "torch==2.1.2",
-    "transformers==4.36.2",
+    "torch>=2.2.0",
+    "transformers==4.38.2",
     "alembic==1.13.1",
     "sqlalchemy==2.0.25",
+    "bcrypt>=4.0.0,<5.0.0",
 ]
 
 [project.optional-dependencies]
