--- a/packages/backend/requirements.txt
+++ b/packages/backend/requirements.txt
@@ -5,6 +5,7 @@ pydantic-settings==2.1.0
 asyncpg==0.29.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+bcrypt>=4.0.0,<5.0.0
 python-multipart==0.0.6
 slowapi==0.1.9
 gliner==0.2.9
@@ -14,3 +15,5 @@ alembic==1.13.1
 sqlalchemy==2.0.25
 pytest==7.4.3
 pytest-asyncio==0.21.1
+httpx==0.26.0
+aiosqlite==0.19.0
