--- a/packages/backend/pyproject.toml
+++ b/packages/backend/pyproject.toml
@@ -19,10 +19,11 @@ dependencies = [
     "slowapi==0.1.9",
     "gliner==0.1.12",
     "torch>=2.2.0",
-    "transformers==4.38.2",
+    "transformers==4.51.0",
     "alembic==1.13.1",
     "sqlalchemy==2.0.25",
     "bcrypt>=4.0.0,<5.0.0",
+    "psycopg2-binary>=2.9.11",
 ]
 
 [project.optional-dependencies]
