--- a/packages/backend/requirements.txt
+++ b/packages/backend/requirements.txt
@@ -13,6 +13,7 @@ torch>=2.2.0
 transformers>=4.38.2
 alembic==1.13.1
 sqlalchemy==2.0.25
+psycopg2-binary==2.9.11
 pytest==7.4.3
 pytest-asyncio==0.21.1
 httpx==0.26.0
